--- a/main.css
+++ b/main.css
@@ -1,15 +1,33 @@
 /*
  Top element
  */body , .body{
-   position: static;
+   position: static    ;
    width: 100%;
    height: auto;
    background-image: url(images/backgr.jpg);
    background-size:  cover ;
    background-repeat:repeat-y;
-      margin:0;
+      margin: 0px;
 
  }
+
+ .bodynews{
+   background-image: url(images/ropotamo.jpg);
+ }
+.newstop{
+
+
+  text-align: -webkit-center;
+    position: relative;
+    top: 4%;
+    width: 100%;
+    align-content: center;
+    background-image: url(images/pic01.jpg);
+    background-position: center;
+    background-size: 140%;
+    background-position-y: 70%;
+}
+
  #header {
 
   position: sticky;
@@ -65,47 +83,65 @@ th{
     border-radius: 13px;
      width: 20%;
 }
+
 ul{
 
   position: absolute;
-  top: 30%;
-  list-style-type: none;
-  padding-left: 0px;
-  width: 11%;
-  height: 55%;
-  text-align: center;
+      list-style-type: none;
+      padding-left: 0px;
+      width: 100%;
+      height: 100%;
+      text-align: center;
 
 }
 
 li{
 
   text-decoration: none;
-    padding: 6px;
-    font-size: 33px;
-    font-weight: bold;
-    font-family: cursive;
-    width: 86%;
-    border-radius: 9px;
-    background-color: aliceblue;
-    opacity: 0.8;
-    margin-top: 10%
+font-size: 48px;
+font-weight: bold;
+font-family: cursive;
+width: 86%;
+border-radius: 9px;
+background-color: aliceblue;
+opacity: 0.8;
+margin-top: 3%;
+height: 20%;
+padding-top: 20%;
+}
+
+}
+li:hover   {
+  background-color: white;
+    opacity: 2.1;
+
 
 
 }
-li:hover {
-  text-decoration: none;
-    padding: 6px;
-    font-size: 33px;
-    font-weight: bold;
-    font-family: cursive;
-    width: 86%;
-    border-radius: 9px;
-    background-color: aliceblue;
-        margin-top: 10% ;
-        opacity:1;
+#into{
 
+  width: 11%;
+      height: 55%;
+      position: absolute;
+      display: block;
+      top: 30%;
+left: 6px;
 
 }
+
+
+.intonews{
+
+  width: 19%;
+    height: 55%;
+      position: absolute;
+      display: block;
+      top: 15%;
+left: 6px;
+
+}
+
+* { margin: 0; padding: 0px; }
 .navigation {
 
   position: absolute;
@@ -162,7 +198,7 @@ width: 38%;
   margin-top: 2%;
 
 }
-
+embed
 
  a{
     border: solid 6px transparent;
@@ -231,3 +267,8 @@ border-radius: 15px;
   width: 23%;
 font-size: 33px;
 }
+img{    padding: 4px;
+    position: relative;
+    top: 25%;
+    left: -1%;
+    width: 20%;}
