--- a/main.css
+++ b/main.css
@@ -5,12 +5,28 @@
    width: 100%;
    height: auto;
    background-image: url(images/backgr.jpg);
-   background-size:  cover ;
+   background-size:  125% ;
    background-repeat:repeat-y;
       margin: 0px;
 
  }
+ a:link {
+   color: blue;
+   background-color: transparent;
+   text-decoration: none;
+ }
 
+ a:visited {
+   color: blue;
+   background-color: transparent;
+   text-decoration: none;
+ }
+
+ a:active {
+  color: blue  ;
+  background-color: transparent;
+  text-decoration: underline;
+}
  .bodynews{
    background-image: url(images/ropotamo.jpg);
  }
@@ -70,7 +86,11 @@ table {
       font-size: 85px;
       color: white;
 }
+.homea:active , .homeb:active, .homed:active , .homec:active {
+  text-decoration: none;
+color: blue;
 
+  }
 .homea , .homeb, .homed , .homec {
   text-decoration: none;
 color: white;
@@ -110,10 +130,9 @@ height: 20%;
 padding-top: 20%;
 }
 
-}
 li:hover   {
   background-color: white;
-    opacity: 2.1;
+    opacity: 0.5;
 
 
 
@@ -177,7 +196,7 @@ width: 38%;
     float: none;
     position: absolute;
     left: 10%;
-    height: 78%;
+    height: 100%;
     width: 50%;
     margin: 9px;
     top: 30%;
@@ -265,7 +284,10 @@ border-radius: 15px;
 }
 #submit{
   width: 23%;
-font-size: 33px;
+    font-size: 33px;
+    position: relative;
+    top: 5px;
+    left: 6em;
 }
 img{    padding: 4px;
     position: relative;
