--- a/mainc.css
+++ b/mainc.css
@@ -5,12 +5,28 @@
    width: 100%;
    height: auto;
    background-image: url(images/backgr.jpg);
-   background-size:  cover ;
+   background-size:  125% ;
    background-repeat:repeat-y;
       margin: 0px;
 
  }
+ a:link {
+   color: blue;
+   background-color: transparent;
+   text-decoration: none;
+ }
 
+ a:visited {
+   color: blue;
+   background-color: transparent;
+   text-decoration: none;
+ }
+
+ a:active {
+   color: blue;
+   background-color: transparent;
+   text-decoration: none;
+ }
  .bodynews{
    background-image: url(images/ropotamo.jpg);
  }
@@ -110,22 +126,22 @@ height: 20%;
 padding-top: 20%;
 }
 
-}
+
 li:hover   {
   background-color: white;
-    opacity: 2.1;
-
-
-
+    opacity: 0.5;
 }
+
+
 .into{
 
-  width: 17%;
-height: 55%;
-position: absolute;
-display: block;
-top: 25%;
-left: 6px;
+
+width: 17%;
+    height: 55%;
+    position: fixed;
+    display: block;
+    top: 13%;
+    left: 6px;
 
 }
 
@@ -193,46 +209,134 @@ width: 38%;
     border-radius: 20px;
     padding: 2px;
 }
+
+
 .form2{
   margin-top: 2%;
 
-}
-embed
-
- a{
-    border: solid 6px transparent;
-    color: darkslategrey;
-    text-decoration: none;
-        color: blue;
-}
+font-family: Arial, Helvetica, sans-serif;}
 
 
+
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
-#home{
-  background-image: url(images/bike/home.png);
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      width: 25%;
+
+/* Set a style for all buttons */
+button {
+  color: black;
+padding: 1px 25px;
+margin: 6px 0;
+border: none;
+cursor: pointer;
+text-align: center;
+font-size: 2em;
+font-weight: bolder;
+width: 9em;
 border-radius: 15px;
-
 }
-#bike{
-  background-image: url(images/bike/bike.png);
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      width: 25%;
-      border-radius: 15px;
 
+button:hover {
+  opacity: 0.8;
 }
-#hike{
-  background-image: url(images/hike.jpg);
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      width: 25%;
-      border-radius: 15px;
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+/* Center the image and position the close button */
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+  position: relative;
+}
+
+
+.container {
+  padding: 16px;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 50%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button (x) */
+.close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer;
+}
+b{
+  font-size: 20px;
+}
+/* Add Zoom Animation */
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)}
+  to {-webkit-transform: scale(1)}
+}
+
+@keyframes animatezoom {
+  from {transform: scale(0)}
+  to {transform: scale(1)}
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
+  .cancelbtn {
+     width: 100%;
+  }
 }
 
 .icon{
