--- a/mainc.css
+++ b/mainc.css
@@ -9,6 +9,23 @@
    background-repeat:repeat-y;
       margin: 0px;
 
+
+ }
+
+ #clickme {
+   position: fixed;
+   top: 0em;
+   display: block;
+   width: 17em;
+   height: 3em;
+   background-color: yellow;
+   border: solid 4px red;
+   border-radius: 1em;
+   color: red;
+   font-size: 1em;
+   font-weight: bold;
+   font-family: unset;
+
  }
  a:link {
    color: blue;
@@ -121,9 +138,9 @@ width: 86%;
 border-radius: 9px;
 background-color: aliceblue;
 opacity: 0.8;
-margin-top: 3%;
-height: 20%;
-padding-top: 20%;
+margin-bottom: 23%;
+height: 17%;
+padding-top: 31px;
 }
 
 
@@ -132,7 +149,21 @@ li:hover   {
     opacity: 0.5;
 }
 
+li.about{
 
+  text-decoration: none;
+  font-size: 48px;
+  font-weight: bold;
+  font-family: cursive;
+  width: 86%;
+  border-radius: 9px;
+  background-color: aliceblue;
+  opacity: 0.8;
+  margin-bottom: 23%;
+  height: 17%;
+  padding-top: 31px;
+
+}
 .into{
 
 
@@ -229,6 +260,11 @@ input[type=text], input[type=password] {
   box-sizing: border-box;
 }
 
+[type=submit]{
+
+background-color: green;
+
+}
 /* Set a style for all buttons */
 button {
   color: black;
@@ -248,18 +284,15 @@ button:hover {
 }
 
 /* Extra styles for the cancel button */
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
+.cancelbtn {    width: auto;
+    padding: 10px 3em;
+    background-color: #f44336;
+    margin-right: 2em;
+    margin-left: 9em;
 }
 
 /* Center the image and position the close button */
-.imgcontainer {
-  text-align: center;
-  margin: 24px 0 12px 0;
-  position: relative;
-}
+.
 
 
 .container {
@@ -267,8 +300,7 @@ button:hover {
 }
 
 span.psw {
-  float: right;
-  padding-top: 16px;
+
 }
 
 /* The Modal (background) */
@@ -292,6 +324,8 @@ span.psw {
   margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
   border: 1px solid #888;
   width: 50%; /* Could be more or less, depending on screen size */
+  padding: 6em;
+
 }
 
 /* The Close Button (x) */
