--- a/mainc.css
+++ b/mainc.css
@@ -50,7 +50,7 @@
 .newstop{
 
 
-  text-align: -webkit-center;
+  text-align: center;
     position: relative;
     top: 4%;
     width: 100%;
@@ -75,7 +75,7 @@
     }
 
     h1{
-      dicplay: center;
+    
       margin:0;
             width:100%;
       font-size: 50px;
@@ -111,7 +111,7 @@ border: solid 4px white;
 border-radius: 9px;
 padding: 5%;
   }
-}
+
 th{
     border-radius: 13px;
      width: 20%;
@@ -292,9 +292,6 @@ button:hover {
 }
 
 /* Center the image and position the close button */
-.
-
-
 .container {
   padding: 16px;
 }
@@ -348,11 +345,11 @@ b{
 }
 /* Add Zoom Animation */
 .animate {
-  -webkit-animation: animatezoom 0.6s;
-  animation: animatezoom 0.6s
+  animation: animatezoom 0.6s;
+
 }
 
-@-webkit-keyframes animatezoom {
+@-webkit-keyframes  {
   from {-webkit-transform: scale(0)}
   to {-webkit-transform: scale(1)}
 }
@@ -397,15 +394,8 @@ img{      padding: 1em;
   width: 80%;
   left: 17%;
 }
-      }
 
 
-
-      .iconh{
-
-
-
-    }
     p{
       color: white;
   font-size: 25px;
@@ -414,7 +404,7 @@ img{      padding: 1em;
   position: relative;
   right: -13em;
   bottom: 131px;
-  background-color: rgba(26, 53, -13, 0.4);
+  background-color: rgba(26, 53, 0, 0.4);
   padding: 1%;
   border-radius: 15px
     }
